# INSTRING_BE

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  backup.sql  docker-compose.yml  migrate.py  pyproject.toml  task-definition.json
INewApp/: main.py
INewApp/common/: base_model.py
INewApp/common/common_models/: category.py  level.py
INewApp/common/utils/: song_repo_class.py
INewApp/core/: config.py  connect_s3.py  db_engine.py  dependencies.py  middlewares.py  redis_set.py
INewApp/core/error/: exceptions.py  (+2 more)
app/: main.py
app/api/: depends.py
app/core/: config.py  db_engine.py
app/schemas/: auth_dto.py  category_dto.py  device_register.py  gstring_val.py  guitar_val.py  level_step.py  modal_dto.py  record_dto.py  song_dto.py
app/test/: asdf.py
jops/: db_contain.py
migrations/: env.py
migrations/versions/: 005acb9e7f65_add_user_record_10.py  0f4ba0861216_restore_song_search_vector.py  112e5489e801_song_level_cascaed.py  133af9dd9a29_user_user_record_cascade.py  15d1b17f447d_add_folder.py  197e0c589f6c_modal_add.py  34035047d507_add_category_6.py  3c0385963d53_n_n_8.py  44ecbf213e46_add_user_song_click.py  4f0addb809cd_init.py  5eeb073c04f6_init.py  736849a0839a_restore_user_record_search_vector.py  7be3cb78d02a_add_record_fts_and_trgm3.py  8db3cd04cea2_add_modal_in_usertable.py  914aee82df0b_re_user_1.py  a6a22941b2a9_add_search_indexes.py  a810adfd8d9f_modal_add_col.py  a9e025538e43_create_table.py  aa04791c8b79_add_fts_and_trgm.py  bb4c2075d9a6_modal_modification.py  f333f7e66801_add_fts_and_trgm.py  fbf657384593_remove_guitar.py
(+103 files in other folders)
